Changes to Version 2.0-12

    o fixed bug in deltaMethod.surveg and deltaMethod.coxph to all use of the 'parameterNames' argument.

	o compareCoefs:  added an argument 'print' to suppress printing output.  Added support for 'lme' objects.
	
	o fixed xlab, ylab arguments and added dfn argument to confidenceEllipse() (suggestions of Michael Friendly).

Changes to Version 2.0-11

  	o the arguments to deltaMethod have changed, with parameterPrefix replaced by parameterNames.  See documentation for useage.
  
  	o deltaMethod methods for lmList, nlsList, and mer objects have been added.  The syntax for the multinom method has been improved.

  	o the 'layout' argument is used in several graphical functions to determine the layout of multiple graphs within the same graphical window.  Setting layout=NA in these functions suppresses this behavior and the user can set the layout outside the function (suggested by Steve Milborrow)

	o compareCoefs() works with 'mer' objects created by lme4
  
  	o  avPlot() now will optionally plot concentration ellipses; avPlot() and avPlots() invisibly return coordinates (suggested by Michael Friendly, with contributed code).

  	o  dataEllipse() now allows combination of add=FALSE and plot.points=FALSE (suggested by Michael Friendly, with contributed code); the ellipse functions have acquired a "draw" argument, which can be used to suppress graphical output (suggestion of Benoit Bruneau).

	o  ellipse(), confidenceEllipse(), and dataEllipse() return coordinates invisibly (suggested by Michael Friendly, with contributed code).
	
	o  fixed bug in printed representation of hypotheses with numbers starting with "-1" or "+1" (e.g., "-10") by linearHypothesis() (reported by Vincent Arel-Bundock).
	
	o  local version of fixef() to avoid lme4/nlme conflicts that surfaced in some situations with Anova().
	
	o  changed order of columns in ANOVA tables for mixed models to make them consistent with other models.

Changes to Version 2.0-10
