@@ -5,6 +5,10 @@ Changes to Version 2.0-12
 	o compareCoefs:  added an argument 'print' to suppress printing output.  Added support for 'lme' objects.
 	
 	o fixed xlab, ylab arguments and added dfn argument to confidenceEllipse() (suggestions of Michael Friendly).
+	
+	o moved survival from Depends to Suggests (request of Michael Friendly); added survey to Suggests.
+	
+	o added Anova.svyglm and linearHypothesis.glm.
 
 Changes to Version 2.0-11
 
